--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <html lang="en>
 <head>
 <title> Recipes</title>
-
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="../recipes/lasagna.html"> Lasagna Recipe</a>
+    <h1>Make delicious food with Chef fiendishfish</h1>
+    <h2>Here are some delicious recipes:</h2>
+    <ul>
+    <li><a href="../recipes/lasagna.html"> Lasagna</a></li>
+    <li><a href="../recipes/philly-cheesesteak.html"> Philly Cheesesteak</a></li>
+    <li><a href="../recipes/lemon-chicken-with-pasta-olives-and-herbs.html">Lemon Chicken with Pasta, Olives, and Herbs </a></li>
+</ul>
+
 </body>
